--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="app"></div>
+        <div id="root"></div>
     </body>
 </html>
