--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
-        <base href="/" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
-        <script>
-            if (window.MSCompatibleInfo) {
-                var error =
-                    "Internet Explorer is not supported. Please use a modern browser instead.";
-                document.querySelector("html").innerHTML = error;
-                throw new Error(error);
-            }
-        </script>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app. </noscript>
-        <div id="root"></div>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <base href="/" />
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <script>
+        if (window.MSCompatibleInfo) {
+            var error =
+                "Internet Explorer is not supported. Please use a modern browser instead.";
+            document.querySelector("html").innerHTML = error;
+            throw new Error(error);
+        }
+
+    </script>
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app. </noscript>
+    <div id="root"></div>
+</body>
+
 </html>
