vitest eslint plugin; configuration tweaks

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <base href="/" />
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title>Reactplate</title>
     <script>
         if (window.MSCompatibleInfo) {
             var error =
