--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <base href="/" />
+
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="%favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="reactplate" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+
     <title>Reactplate</title>
     <script>
         if (window.MSCompatibleInfo) {
