header now has an h1 title of the app

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-title" content="reactplate" />
     <link rel="manifest" href="favicon/site.webmanifest" />
 
-    <title>Reactplate</title>
+    <title>reactplate</title>
     <script>
         if (window.MSCompatibleInfo) {
             var error =
