--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="reactplate" />
     <link rel="manifest" href="favicon/site.webmanifest" />
+    <link rel="preconnect" href="https://api.spaceflightnewsapi.net" />
+    <link rel="dns-prefetch" href="https://api.spaceflightnewsapi.net" />
 
     <title>reactplate</title>
     <script>
