--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="description"
+        content="Reactplate, a React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier." />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
