--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="author" content="Piotr Piech, piotr@piech.dev" />
+    <meta name="author" content="piotr@piech.dev" />
     <meta name="description"
         content="A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier. VS Code settings bundled with the boilerplate, including recommended extensions for automatic formatting  via a one-click install. Scores perfect 100/100/100/100 score in Chrome Lighthouse." />
 
