--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         content="A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier. VS Code settings bundled with the boilerplate, including recommended extensions for automatic formatting  via a one-click install. Scores perfect 100/100/100/100 score in Chrome Lighthouse." />
 
     <meta name="keywords"
-        content="react, redux, template, boilerplate, typescript, eslint, accessibility, prettier, netlify, rtk, typescript-eslint, vitejs, rtk-query">
+        content="react, redux, template, boilerplate, typescript, eslint, accessibility, prettier, netlify, rtk, typescript-eslint, vitejs, rtk-query" />
     <meta property="og:title" content="reactplate" />
     <meta property="og:description"
-        content="A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier. VS Code settings bundled with the boilerplate, including recommended extensions for automatic formatting  via a one-click install. Scores perfect 100/100/100/100 score in Chrome Lighthouse.">
+        content="A React + modern Redux (RTK) boilerplate for a fully configured quick start with automatic formatting and linting with ESLint & Prettier. VS Code settings bundled with the boilerplate, including recommended extensions for automatic formatting  via a one-click install. Scores perfect 100/100/100/100 score in Chrome Lighthouse." />
     <meta property="og:url" content="https://reatplate.com" />
 
     <meta name="robots" content="follow" />
